data/raw_logs/lexical/lex_27.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_27.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_27.c:1:22: error: invalid digit '2' in binary constant
    1 | int main() { int x = 0b102; }
      |                      ^~~~~
